Final Game finished, with buttons reset / start and initial config.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>Gordon's Game of Life</h1>
+        <button onclick="start()" style="margin-bottom:10px;">Start</button>
+        <button onclick="initialiseBoard()" style="margin-bottom:10px;">Reset</button>
+        <br>
     </body>
 </html>
